# pylogcfg

./: .editorconfig  .gitignore  license.txt  pylogconfig.json  pyproject.toml  readme.md
src/: main.py
src/pylogcfg/: __init__.py  cfg_pylogcfg.py  pylogcfg.py
tests/: test_cfg_pylogcfg.py  test_pylogcfg.py  test_pylogcfg_extra.py
