[project]
name = "pylogcfg"
description = "Configuração do logging"
authors = [
  { name = "Tacio Dewes", email = "taciodewes@gmail.com" }
]
version = "0.0.1"
license = "MIT"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = ["tzdata"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.venv
    | \.vscode
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | build
    | dist
    | data
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["pylogcfg"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["W0602", "W0603", "W0718"]

[tool.pylint."BASIC"]
good-names = [
  "df",
  "log",
  "from"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=pylogcfg --cov-report=term-missing --cov-report=html"